# fugl_artsdataanalyser

./: .gitignore  AGENTS.md  Databehandling.py  arter_i_polygoner.py  fugl_atributt_data  output_test.parquet  pyproject.toml
.pi/prompts/: databehandling.md
__marimo__/session/: Data_analyse.py.json  Databehandling.py.json  Orginal.py.json  arter_i_polygoner.py.json  funksjoner_for_dataanalyse.py.json
dataanalyse/: data_analyse.py  funksjoner_for_dataanalyse.py
dataanalyse/__marimo__/session/: data_analyse.py.json
dataanalyse/layouts/: data_analyse.grid.json
databehandling/: databehandling.py  fugl_atributt_data
databehandling/__marimo__/session/: databehandling.py.json
docs/: API_AND_DATA.md  GIT.md  MARIMO.md  PYTHON_CONVENTIONS.md
gamle_notebooks/: Orginal.py  arter_i_polygoner.py
gamle_notebooks/__marimo__/session/: Orginal.py.json
tests/: test_api_failure_behavior.py  test_m1941.py  test_national_interest_summary.py  test_pipeline_smoke.py
tests_KI/: helpers.py  test_api_failure_behavior.py  test_contracts.py  test_m1941.py  test_national_interest_summary.py  test_output_schema.py  test_pipeline_smoke.py
